; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/rockchip/extr_rockchip_drm_fbdev.c_rockchip_drm_fbdev_fini.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/rockchip/extr_rockchip_drm_fbdev.c_rockchip_drm_fbdev_fini.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.drm_device = type { %struct.rockchip_drm_private* }
%struct.rockchip_drm_private = type { %struct.drm_fb_helper }
%struct.drm_fb_helper = type { i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @rockchip_drm_fbdev_fini(%struct.drm_device* %0) #0 {
  %2 = alloca %struct.drm_device*, align 8
  %3 = alloca %struct.rockchip_drm_private*, align 8
  %4 = alloca %struct.drm_fb_helper*, align 8
  store %struct.drm_device* %0, %struct.drm_device** %2, align 8
  %5 = load %struct.drm_device*, %struct.drm_device** %2, align 8
  %6 = getelementptr inbounds %struct.drm_device, %struct.drm_device* %5, i32 0, i32 0
  %7 = load %struct.rockchip_drm_private*, %struct.rockchip_drm_private** %6, align 8
  store %struct.rockchip_drm_private* %7, %struct.rockchip_drm_private** %3, align 8
  %8 = load %struct.rockchip_drm_private*, %struct.rockchip_drm_private** %3, align 8
  %9 = getelementptr inbounds %struct.rockchip_drm_private, %struct.rockchip_drm_private* %8, i32 0, i32 0
  store %struct.drm_fb_helper* %9, %struct.drm_fb_helper** %4, align 8
  %10 = load %struct.drm_fb_helper*, %struct.drm_fb_helper** %4, align 8
  %11 = call i32 @drm_fb_helper_unregister_fbi(%struct.drm_fb_helper* %10)
  %12 = load %struct.drm_fb_helper*, %struct.drm_fb_helper** %4, align 8
  %13 = getelementptr inbounds %struct.drm_fb_helper, %struct.drm_fb_helper* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %21

16:                                               ; preds = %1
  %17 = load %struct.drm_fb_helper*, %struct.drm_fb_helper** %4, align 8
  %18 = getelementptr inbounds %struct.drm_fb_helper, %struct.drm_fb_helper* %17, i32 0, i32 0
  %19 = load i64, i64* %18, align 8
  %20 = call i32 @drm_framebuffer_put(i64 %19)
  br label %21

21:                                               ; preds = %16, %1
  %22 = load %struct.drm_fb_helper*, %struct.drm_fb_helper** %4, align 8
  %23 = call i32 @drm_fb_helper_fini(%struct.drm_fb_helper* %22)
  ret void
}

declare dso_local i32 @drm_fb_helper_unregister_fbi(%struct.drm_fb_helper*) #1

declare dso_local i32 @drm_framebuffer_put(i64) #1

declare dso_local i32 @drm_fb_helper_fini(%struct.drm_fb_helper*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
